--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       </ul>
       <div class="logo">
         <h1>Western Rise</h1>
-        <img src="ImagesUsed/Western Rise Logo 2.png" alt="Western Rise Logo" />
+        <img
+          src=".ImagesUsed/Western Rise Logo 2.png"
+          alt="Western Rise Logo"
+        />
       </div>
 
       <ul>
@@ -73,7 +76,7 @@
         <div
           class="thirdSectionContainer-Grid-Item thirdSectionContainer-Grid-Item1"
         >
-          <img src="/ImagesUsed/download.jpg" alt="Diversion Pant" />
+          <img src="./ImagesUsed/download.jpg" alt="Diversion Pant" />
           <p class="discount">
             65% <br />
             OFF
@@ -88,7 +91,7 @@
         <div
           class="thirdSectionContainer-Grid-Item thirdSectionContainer-Grid-Item2"
         >
-          <img src="/ImagesUsed/download1.jpg" alt="Evolusion Pant" />
+          <img src="./ImagesUsed/download1.jpg" alt="Evolusion Pant" />
           <p class="discount">
             65% <br />
             OFF
@@ -103,7 +106,7 @@
         <div
           class="thirdSectionContainer-Grid-Item thirdSectionContainer-Grid-Item3"
         >
-          <img src="/ImagesUsed/download3.jpg" alt="Warehouse Sale" />
+          <img src="./ImagesUsed/download3.jpg" alt="Warehouse Sale" />
           <p class="discount">
             65% <br />
             OFF
