--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="logo">
         <h1>Western Rise</h1>
         <img
-          src=".ImagesUsed/Western Rise Logo 2.png"
+          src="./ImagesUsed/Western Rise Logo 2.png"
           alt="Western Rise Logo"
         />
       </div>
